@@ -1,3 +1,9 @@
+2006-07-26 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/lib/_fsdiv.c,
+	* device/lib/_fsmul.c: bugfix, handle too large and too small numbers
+	* support/regression/tests/bug1520966.c: added
+
 2006-07-25 Borut Razem <borut.razem AT siol.net>
 
 	* configure.in, configure, sdccconf_in.h: fixed bug
